--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3380,6 +3380,8 @@ TO_REMOVE+=/etc/periodic/daily/430.status-rwho
 TO_REMOVE+=/etc/mtree/BSD.local.dist
 TO_REMOVE+=/usr/share/man/man9/devfs_clone_bitmap_fff.9.gz
 TO_REMOVE+=/usr/share/man/man7/stabs.7.gz
+TO_REMOVE+=/boot/kernel/libalias.ko
+TO_REMOVE+=/usr/include/net/libalias
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
