libc: Move to a format for specifying MLINKS that's less hard on the eyes.
We do it like this in other places of the tree already and will eventually
move to this everywhere.

--- a/lib/libc/stdlib/Makefile.inc
+++ b/lib/libc/stdlib/Makefile.inc
@@ -44,30 +44,59 @@ MAN+=	a64l.3 abort.3 abs.3 alloca.3 atexit.3 atof.3 atoi.3 atol.3 \
 	realpath.3 strfmon.3 strtod.3 strtol.3 strtonum.3 strtoul.3 system.3 \
 	tsearch.3
 
-MLINKS+=a64l.3 l64a.3 a64l.3 l64a_r.3
+MLINKS+=a64l.3 l64a.3 \
+	a64l.3 l64a_r.3
 MLINKS+=atof.3 atof_l.3
 MLINKS+=atoi.3 atoi_l.3
-MLINKS+=atol.3 atol_l.3 atol.3 atoll.3 atol.3 atoll_l.3
+MLINKS+=atol.3 atol_l.3 \
+	atol.3 atoll.3 \
+	atol.3 atoll_l.3
 MLINKS+=exit.3 _Exit.3
-MLINKS+=getenv.3 putenv.3 getenv.3 setenv.3 getenv.3 unsetenv.3
+MLINKS+=getenv.3 putenv.3 \
+	getenv.3 setenv.3 \
+	getenv.3 unsetenv.3
 MLINKS+=getopt_long.3 getopt_long_only.3
-MLINKS+=hcreate.3 hdestroy.3 hcreate.3 hsearch.3
+MLINKS+=hcreate.3 hdestroy.3 \
+	hcreate.3 hsearch.3
 MLINKS+=insque.3 remque.3
 MLINKS+=lsearch.3 lfind.3
-MLINKS+=malloc.3 calloc.3 malloc.3 free.3 malloc.3 realloc.3 malloc.3 reallocf.3
+MLINKS+=malloc.3 calloc.3 \
+	malloc.3 free.3 \
+	malloc.3 realloc.3 \
+	malloc.3 reallocf.3
 MLINKS+=posix_memalign.3 aligned_alloc.3
-MLINKS+=ptsname.3 grantpt.3 ptsname.3 unlockpt.3
-MLINKS+=qsort.3 heapsort.3 qsort.3 mergesort.3 qsort.3 qsort_r.3
+MLINKS+=ptsname.3 grantpt.3 \
+	ptsname.3 unlockpt.3
+MLINKS+=qsort.3 heapsort.3 \
+	qsort.3 mergesort.3 \
+	qsort.3 qsort_r.3
 MLINKS+=radixsort.3 sradixsort.3
-MLINKS+=rand.3 rand_r.3 rand.3 srand.3 rand.3 sranddev.3
-MLINKS+=random.3 initstate.3 random.3 setstate.3 random.3 srandom.3 \
+MLINKS+=rand.3 rand_r.3 \
+	rand.3 srand.3 \
+	rand.3 sranddev.3
+MLINKS+=random.3 initstate.3 \
+	random.3 setstate.3 \
+	random.3 srandom.3 \
 	random.3 srandomdev.3
 MLINKS+=strfmon.3 strfmon_l.3
-MLINKS+=strtod.3 strtod_l.3 strtod.3 strtof.3 strtod.3 strtof_l.3 \
-	strtod.3 strtold.3 strtod.3 strtold_l.3
-MLINKS+=strtol.3 strtoimax.3 strtol.3 strtoimax_l.3 strtol.3 strtol_l.3 \
-	strtol.3 strtoll.3 strtol.3 strtoll_l.3 strtol.3 strtoq.3
-MLINKS+=strtoul.3 strtoul_l.3 strtoul.3 strtoull.3 strtoul.3 strtoull_l.3 \
-	strtoul.3 strtoumax.3 strtoul.3 strtoumax_l.3 strtoul.3 strtouq.3
-MLINKS+=tsearch.3 tdelete.3 tsearch.3 tfind.3 tsearch.3 twalk.3
+MLINKS+=strtod.3 strtod_l.3 \
+	strtod.3 strtof.3 \
+	strtod.3 strtof_l.3 \
+	strtod.3 strtold.3 \
+	strtod.3 strtold_l.3
+MLINKS+=strtol.3 strtoimax.3 \
+	strtol.3 strtoimax_l.3 \
+	strtol.3 strtol_l.3 \
+	strtol.3 strtoll.3 \
+	strtol.3 strtoll_l.3 \
+	strtol.3 strtoq.3
+MLINKS+=strtoul.3 strtoul_l.3 \
+	strtoul.3 strtoull.3 \
+	strtoul.3 strtoull_l.3 \
+	strtoul.3 strtoumax.3 \
+	strtoul.3 strtoumax_l.3 \
+	strtoul.3 strtouq.3
+MLINKS+=tsearch.3 tdelete.3 \
+	tsearch.3 tfind.3 \
+	tsearch.3 twalk.3
 .endif
