--- a/lib/libc/string/Makefile.inc
+++ b/lib/libc/string/Makefile.inc
@@ -45,12 +45,12 @@ MLINKS+=ffs.3 ffsl.3 \
 MLINKS+=index.3 rindex.3
 MLINKS+=memchr.3 memrchr.3
 MLINKS+=memcpy.3 mempcpy.3
-MLINKS+=strcasecmp.3 strncasecmp.3 \
-	strcasecmp.3 strcasecmp_l.3 \
+MLINKS+=strcasecmp.3 strcasecmp_l.3 \
+	strcasecmp.3 strncasecmp.3 \
 	strcasecmp.3 strncasecmp_l.3
 MLINKS+=strcat.3 strncat.3
-MLINKS+=strchr.3 strrchr.3 \
-	strchr.3 strchrnul.3
+MLINKS+=strchr.3 strchrnul.3 \
+	strchr.3 strrchr.3
 MLINKS+=strcmp.3 strncmp.3
 MLINKS+=strcoll.3 strcoll_l.3
 MLINKS+=strcpy.3 stpcpy.3 \
@@ -64,8 +64,8 @@ MLINKS+=strerror.3 perror.3 \
 MLINKS+=strlcpy.3 strlcat.3
 MLINKS+=strlen.3 strnlen.3
 MLINKS+=strstr.3 strcasestr.3 \
-	strstr.3 strnstr.3 \
-	strstr.3 strcasestr_l.3
+	strstr.3 strcasestr_l.3 \
+	strstr.3 strnstr.3
 MLINKS+=strtok.3 strtok_r.3
 MLINKS+=strxfrm.3 strxfrm_l.3
 MLINKS+=wcscoll.3 wcscoll_l.3
