--- a/lib/libutil/Makefile
+++ b/lib/libutil/Makefile
@@ -33,47 +33,73 @@ MAN+=	hexdump.3
 MAN+=	pw_util.3
 
 MLINKS+=auth.3 auth_getval.3
-MLINKS+=efun.3 ecalloc.3 efun.3 emalloc.3 efun.3 erealloc.3 efun.3 esetfunc.3 \
-	efun.3 estrdup.3 efun.3 estrlcat.3 efun.3 estrlcpy.3 \
-	efun.3 estrndup.3 efun.3 easprintf.3
+MLINKS+=efun.3 easprintf.3 \
+	efun.3 ecalloc.3 \
+	efun.3 emalloc.3 \
+	efun.3 erealloc.3 \
+	efun.3 esetfunc.3 \
+	efun.3 estrdup.3 \
+	efun.3 estrlcat.3 \
+	efun.3 estrlcpy.3 \
+	efun.3 estrndup.3
 MLINKS+=humanize_number.3 dehumanize_number.3
 MLINKS+=humanize_unsigned.3 format_bytes.3
-MLINKS+=login_cap.3 login_getclassbyname.3 login_cap.3 login_close.3 \
-	login_cap.3 login_getclass.3 login_cap.3 login_getuserclass.3 \
-	login_cap.3 login_getcapstr.3 login_cap.3 login_getcaplist.3 \
-	login_cap.3 login_getstyle.3 login_cap.3 login_getcaptime.3 \
-	login_cap.3 login_getcapnum.3 login_cap.3 login_getcapsize.3 \
-	login_cap.3 login_getcapbool.3 login_cap.3 login_getpath.3 \
-	login_cap.3 login_getpwclass.3 login_cap.3 login_setcryptfmt.3
-MLINKS+=loginx.3 logoutx.3 loginx.3 logwtmpx.3
-MLINKS+=login_class.3 setusercontext.3 login_class.3 setclasscontext.3 \
-	login_class.3 setclassenvironment.3 login_class.3 setclassresources.3
-MLINKS+=login_times.3 parse_lt.3 login_times.3 in_ltm.3 \
-	login_times.3 in_lt.3 login_times.3 in_ltms.3 \
-	login_times.3 in_lts.3
-MLINKS+=login_ok.3 auth_ttyok.3 login_ok.3 auth_hostok.3 \
-	login_ok.3 auth_timeok.3
-MLINKS+=login_auth.3 auth_checknologin.3 login_auth.3 auth_cat.3
-MLINKS+=pidfile.3 pidfile_close.3 pidfile.3 pidfile_fileno.3 \
-	pidfile.3 pidfile_open.3 pidfile.3 pidfile_remove.3 \
+MLINKS+=login_auth.3 auth_cat.3 \
+	login_auth.3 auth_checknologin.3
+MLINKS+=login_cap.3 login_close.3 \
+	login_cap.3 login_getcapbool.3 \
+	login_cap.3 login_getcaplist.3 \
+	login_cap.3 login_getcapnum.3 \
+	login_cap.3 login_getcapsize.3 \
+	login_cap.3 login_getcapstr.3 \
+	login_cap.3 login_getcaptime.3 \
+	login_cap.3 login_getclass.3 \
+	login_cap.3 login_getclassbyname.3 \
+	login_cap.3 login_getpath.3 \
+	login_cap.3 login_getpwclass.3 \
+	login_cap.3 login_getstyle.3 \
+	login_cap.3 login_getuserclass.3 \
+	login_cap.3 login_setcryptfmt.3
+MLINKS+=login_class.3 setclasscontext.3 \
+	login_class.3 setclassenvironment.3 \
+	login_class.3 setclassresources.3 \
+	login_class.3 setusercontext.3
+MLINKS+=login_ok.3 auth_hostok.3 \
+	login_ok.3 auth_timeok.3 \
+	login_ok.3 auth_ttyok.3
+MLINKS+=login_times.3 in_lt.3 \
+	login_times.3 in_ltm.3 \
+	login_times.3 in_ltms.3 \
+	login_times.3 in_lts.3 \
+	login_times.3 parse_lt.3
+MLINKS+=loginx.3 logoutx.3 \
+	loginx.3 logwtmpx.3
+MLINKS+=pidfile.3 pidfile_close.3 \
+	pidfile.3 pidfile_fileno.3 \
+	pidfile.3 pidfile_open.3 \
+	pidfile.3 pidfile_remove.3 \
 	pidfile.3 pidfile_write.3
-MLINKS+=property.3 properties_read.3  property.3 properties_free.3
-MLINKS+=property.3 property_find.3
-MLINKS+=pty.3 openpty.3 pty.3 forkpty.3
-MLINKS+=uucplock.3 uu_lock.3 uucplock.3 uu_lock_txfr.3 \
-	uucplock.3 uu_unlock.3 uucplock.3 uu_lockerr.3
+MLINKS+=property.3 properties_free.3 \
+	property.3 properties_read.3 \
+	property.3 property_find.3
+MLINKS+=pty.3 forkpty.3 \
+	pty.3 openpty.3
 MLINKS+=pw_util.3 pw_copy.3 \
 	pw_util.3 pw_dup.3 \
 	pw_util.3 pw_edit.3 \
 	pw_util.3 pw_equal.3 \
 	pw_util.3 pw_fini.3 \
 	pw_util.3 pw_init.3 \
+	pw_util.3 pw_lock.3 \
 	pw_util.3 pw_make.3 \
 	pw_util.3 pw_make_v7.3 \
 	pw_util.3 pw_mkdb.3 \
-	pw_util.3 pw_lock.3 \
 	pw_util.3 pw_scan.3 \
 	pw_util.3 pw_tempname.3 \
 	pw_util.3 pw_tmp.3
+MLINKS+=uucplock.3 uu_lock.3 \
+	uucplock.3 uu_lockerr.3 \
+	uucplock.3 uu_lock_txfr.3 \
+	uucplock.3 uu_unlock.3
 
 .include <bsd.lib.mk>
