Revert "libssh: Remove local vis.c from the build."
This reverts commit dc312142da731a4dd82f924bf4442734ec45e880.

It needs further thought, our <vis.h> does not have VIS_ALL
(see BROKEN_STRNVIS in lib/libssh/config.h).

--- a/lib/libssh/Makefile
+++ b/lib/libssh/Makefile
@@ -31,7 +31,7 @@ SRCS+=	authfd.c authfile.c bufaux.c bufbn.c bufec.c buffer.c \
 # Portability layer
 SRCS+=	bcrypt_pbkdf.c blowfish.c bsd-misc.c explicit_bzero.c \
 	getrrsetbyname.c glob.c openssl-compat.c \
-	port-tun.c reallocarray.c realpath.c timingsafe_bcmp.c \
+	port-tun.c reallocarray.c realpath.c timingsafe_bcmp.c vis.c \
 	recallocarray.c
 
 # only when USE_BUILTIN_RIJNDAEL
