--- a/lib/libcompat/Makefile
+++ b/lib/libcompat/Makefile
@@ -8,17 +8,12 @@ WARNS?=	2
 .PATH:	${.CURDIR}/4.1 ${.CURDIR}/4.3 ${.CURDIR}/4.4
 
 # compat 4.1 sources
-SRCS+=	ftime.c gtty.c stty.c
-
-MAN+=	4.1/ftime.3 4.1/stty.3
-
-MLINKS+=stty.3 gtty.3
+SRCS+=	ftime.c
+MAN+=	4.1/ftime.3
 
 # compat 4.3 sources
 SRCS+=	re_comp.c rexec.c
-
 MAN+=	4.3/re_comp.3 4.3/rexec.3
-
 MLINKS+=re_comp.3 re_exec.3
 
 # compat 4.4 sources
