Add FreeBSD's mpr(4) driver for LSI Fusion-MPT 3/3.5 SAS controllers.
This commit also includes a userland utility for mps(4) and mpr(4)
(mprutil(8) aka mpsutil(8)).

After porting bug fixing, testing shows that it seems to be stable,
therefore I have added it to our X64_64_GENERIC as well.

Thanks to zrj for testing and to sephe for some porting clues.

Taken-from: FreeBSD

--- a/etc/devd.conf
+++ b/etc/devd.conf
@@ -20,7 +20,7 @@ options {
 	#XXX Yes, these are gross -- imp
 	set scsi-controller-regex
 		"(aac|adv|adw|amd|amr|asr|bt|ciss|dpt|\
-		ida|iir|ips|isp|mlx|mly|mpt|ncr|sym|trm)\
+		ida|iir|ips|isp|mlx|mly|mpr|mps|mpt|ncr|sym|trm)\
 		[0-9]+";
 };
 
