--- a/sys/dev/raid/Makefile
+++ b/sys/dev/raid/Makefile
@@ -1,5 +1,5 @@
 SUBDIR=	aac amr arcmsr asr ciss hpt27xx hptiop hptmv hptrr \
-	iir ips mfi mlx mly mps mrsas twa twe tws vinum
+	iir ips mfi mlx mly mpr mps mrsas twa twe tws vinum
 
 # Empty for concurrent build
 #
