--- a/sys/dev/drm/drm/Makefile
+++ b/sys/dev/drm/drm/Makefile
@@ -53,6 +53,7 @@ SRCS	= \
 	linux_i2c.c \
 	linux_hrtimer.c \
 	linux_iomapping.c \
+	linux_irq.c \
 	linux_list_sort.c \
 	linux_shmem.c \
 	linux_sort.c \
