--- a/games/adventure/setup/Makefile
+++ b/games/adventure/setup/Makefile
@@ -3,6 +3,8 @@
 PROG=	setup
 CFLAGS+=-I${.CURDIR}/..
 
+build-tools: setup.nx
+
 # this setup is used in place, it is not installed anywhere
 install:
 
