--- a/games/phantasia/setup/Makefile
+++ b/games/phantasia/setup/Makefile
@@ -8,6 +8,8 @@ LDADD+=	-lm
 
 CFLAGS+=-DCOMPILING_SETUP -I${.CURDIR}/..
 
+build-tools: setup.nx
+
 # this setup is used in place, it is not installed anywhere
 install:
 
