--- a/bin/csh/csh/Makefile
+++ b/bin/csh/csh/Makefile
@@ -40,6 +40,12 @@ DPADD=	${LIBNCURSES} ${LIBCRYPT} ${LIBCRYPTO}
 LDADD=	-lprivate_ncurses -lcrypt -lprivate_crypto
 LDFLAGS+=	${PRIVATELIB_LDFLAGS}
 
+# The gcc80 -O2 tends to wrap malloc() + bzero() back to local calloc() by
+# emitting calloc: imul %rsi,%rdi; mov $0x1,%esi; jmpq 0xfoo <calloc>
+FLAGS_GROUPS=	calloc
+calloc_FLAGS=	-fno-builtin-malloc
+calloc_FLAGS_FILES= tc.alloc.c
+
 # XXX hmmm
 .if defined(BOOTSTRAPPING)
 . if ${CFLAGS:M-flto}
