--- a/gnu/usr.bin/cc80/support-libs/libcommon-target/Makefile
+++ b/gnu/usr.bin/cc80/support-libs/libcommon-target/Makefile
@@ -16,6 +16,11 @@ common_out_object_file=	i386-common.o
 OBJS=		${OBJS-libcommon-target}
 CFLAGS+=	-DPREFIX=\"${TOOLS_PREFIX}/usr\"
 
+# for opts-common.c
+.if ${CCVER:Mgcc80}
+CXXFLAGS+=	-Wno-narrowing
+.endif
+
 .for ofile in ${OBJS-libcommon-target}
 ${ofile}: ${ofile:.o=.c}
 	${CXX} ${STATIC_CXXFLAGS} ${CXXFLAGS} -c ${.IMPSRC} -o ${.TARGET}
