--- a/usr.sbin/config/Makefile
+++ b/usr.sbin/config/Makefile
@@ -1,6 +1,5 @@
 # 	@(#)Makefile	8.1 (Berkeley) 6/6/93
 # $FreeBSD: src/usr.sbin/config/Makefile,v 1.26.2.1 2001/04/25 12:09:23 ru Exp $
-# $DragonFly: src/usr.sbin/config/Makefile,v 1.5 2005/01/12 04:03:46 cpressey Exp $
 
 PROG=	config
 CFLAGS+=-I. -I${.CURDIR}
@@ -9,6 +8,12 @@ SRCS=	config.y main.c lang.l mkioconf.c mkmakefile.c mkheaders.c \
 MAN=	config.8
 DPADD=	${LIBL}
 LDADD=	-ll
+
+# XXX: for now do not let the use of -flto, gcc80
+.if ${CFLAGS:M-flto}
+CFLAGS+=	-fno-lto
+LDFLAGS+=	-flto
+.endif
 
 mkmakefile.o: configvers.h
 
