ipfw3_nat: highspeed lockless in-kernel NAT
RB-Tree to stored the state for the outgoing packets, and multidimentional
array of pointers to keep the state for the incoming packets.

--- a/sbin/ipfw3/Makefile
+++ b/sbin/ipfw3/Makefile
@@ -3,7 +3,13 @@
 PROG =	ipfw3
 MAN =	ipfw3.8
 SRCS =	ipfw3.c
+SRCS += ipfw3basic.c ipfw3basic.h
+SRCS += ipfw3set.c ipfw3set.h
+SRCS += ipfw3log.c ipfw3log.h
 SRCS += ipfw3sync.c ipfw3sync.h
+SRCS += ipfw3state.c ipfw3state.h
+SRCS += ipfw3table.c ipfw3table.h
+SRCS += ipfw3dummynet.c ipfw3dummynet.h
 SRCS += ipfw3nat.c ipfw3nat.h
 WARNS?=	2
 
