--- a/sys/net/ipfw3/Makefile
+++ b/sys/net/ipfw3/Makefile
@@ -1,11 +1,7 @@
-# $FreeBSD: src/sys/modules/ipfw/Makefile,v 1.11.2.1 2003/02/14 14:09:21 maxim Exp $
-# $DragonFly: src/sys/net/ipfw/Makefile,v 1.6 2008/09/16 12:16:08 sephe Exp $
-
 KMOD=	ipfw3
-SRCS=	ip_fw3.c
-SRCS+=	ip_fw3_log.c ip_fw3_log.h
-SRCS+=  ip_fw3_table.c ip_fw3_table.h
-SRCS+=  ip_fw3_sync.c ip_fw3_sync.h
+SRCS=	opt_fw3.h
+SRCS=	ip_fw3.c ip_fw3.h
+SRCS+=	ip_fw3_set.c ip_fw3_set.h
 SRCS+=	opt_ipfw.h opt_inet.h
 
 .ifndef BUILDING_WITH_KERNEL
