gcc80: Add missing atomic variants in libgcov.
Use correct config (currently unused).

--- a/gnu/lib/gcc80/libgcov/Makefile
+++ b/gnu/lib/gcc80/libgcov/Makefile
@@ -14,13 +14,21 @@ CFLAGS+=	-DIN_LIBGCC2 -DHAVE_CC_TLS -DIN_GCC
 # used by shared libs
 INSTALL_PIC_ARCHIVE=	yes
 
-# taken from build/x86_64-portbld-dragonfly4.1/libgcc/Makefile
-LIBGCOV_MERGE = _gcov_merge_add _gcov_merge_single _gcov_merge_delta	\
+# taken from build/x86_64-portbld-dragonfly5.3/libgcc/Makefile
+LIBGCOV_MERGE = _gcov_merge_add _gcov_merge_single			\
 	_gcov_merge_ior _gcov_merge_time_profile _gcov_merge_icall_topn
-LIBGCOV_PROFILER = _gcov_interval_profiler _gcov_pow2_profiler		\
-	_gcov_one_value_profiler _gcov_indirect_call_profiler		\
-	_gcov_average_profiler _gcov_ior_profiler			\
-	_gcov_indirect_call_profiler_v2 _gcov_time_profiler		\
+LIBGCOV_PROFILER = _gcov_interval_profiler				\
+	_gcov_interval_profiler_atomic					\
+	_gcov_pow2_profiler						\
+	_gcov_pow2_profiler_atomic					\
+	_gcov_one_value_profiler					\
+	_gcov_one_value_profiler_atomic					\
+	_gcov_average_profiler						\
+	_gcov_average_profiler_atomic					\
+	_gcov_ior_profiler						\
+	_gcov_ior_profiler_atomic					\
+	_gcov_indirect_call_profiler_v2					\
+	_gcov_time_profiler						\
 	_gcov_indirect_call_topn_profiler
 LIBGCOV_INTERFACE = _gcov_dump _gcov_flush _gcov_fork			\
 	_gcov_execl _gcov_execlp					\
