gcc50: Plug in WARNS framework for tools.
At this point should be no-op change.

While there, do the same for gcc50 and gcc47.

--- a/gnu/usr.bin/cc50/cc_tools/Makefile.inc
+++ b/gnu/usr.bin/cc50/cc_tools/Makefile.inc
@@ -4,6 +4,9 @@
 .if !target(__<cctools50.Makefile.inc>__)
 __<cctools50.Makefile.inc>__:
 
+# Hint HOST_CCVER handling.
+__USE_HOST_CCVER=
+
 TOP_PREFIX=	../
 GCC_NO_LIBS=	# yes
 
