boot/pc32: Fix typo in mbr.
Wrong patch in faa6f4d7da5ad6ef2d3e68dd2671b6d6f8161a9b,
the generated mbr was still OK (bmake warning).

While there, only extract XREADORG constant from boot1*.out and not
from bootasmdef.nx in case it ever get one.

--- a/sys/boot/pc32/boot2/Makefile
+++ b/sys/boot/pc32/boot2/Makefile
@@ -124,7 +124,7 @@ boot2$s.o: boot2$s.s
 
 boot2$s.h: boot1$s.out bootasmdef.nx
 	@echo "NOTE: boot2 using xread from boot1 at ${REL1}"
-	${NM} -t d ${.ALLSRC} | awk '/([0-9])+ T xread/ \
+	${NM} -t d ${.ALLSRC:M*.out} | awk '/([0-9])+ T xread/ \
 	 	{ x = $$1 - ORG1; \
 		printf("#define XREADORG %#x\n", REL1 + x) }' \
 	 	ORG1=${ORG1D} REL1=${REL1D} > boot2$s.h
