--- a/sys/boot/pc32/mbr/Makefile
+++ b/sys/boot/pc32/mbr/Makefile
@@ -9,7 +9,7 @@ BINMODE=	444
 ORG=	0x600
 
 mbr: mbr.o
-	${LD} ${LDFLAGS:-Wl,*} -N -e start -Ttext ${ORG} -o mbr.out mbr.o
+	${LD} ${LDFLAGS:N-Wl,*} -N -e start -Ttext ${ORG} -o mbr.out mbr.o
 	objcopy -S -O binary mbr.out ${.TARGET}
 
 CLEANFILES+= mbr.out mbr.o
