boot/pc32: Separate hostprog.
Add guard in common sys/boot/pc32/Makefile.inc.
Hostprog shall not take any of those definitions.

--- a/sys/boot/pc32/Makefile
+++ b/sys/boot/pc32/Makefile
@@ -5,7 +5,7 @@
 .endif
 
 # must come before boot2
-SUBDIR=	btx
+SUBDIR=	asmdef btx
 
 SUBDIR+=boot0 boot0sio boot2 cdboot libi386 loader loader_tftp mbr
 
